# tomoro_finetune_cookbook

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
ar_finetune/: conversations.py  datasets.py  metrics.py  repo_utils.py  tinker_infer.py  tinker_train.py
ar_finetune/cli/: gpt_benchmark.py  make_conversations.py  tinker_finetune.py  tinker_infer.py
notebooks_sl/: build_dataset_emails.ipynb  build_dataset_mlx.ipynb  build_dataset_sc.ipynb  inference.ipynb  local_finetune_8bit_lora.ipynb  mlx_finetune.ipynb  phishing_classifier.ipynb  tinker_finetune.ipynb
src/ar_finetune/: __init__.py  io_utils.py  tabular.py
src/ar_finetune/bench/: gpt.py
src/ar_finetune/cli/: __init__.py  _common.py  gpt_benchmark.py  make_conversations.py  tinker_finetune.py  tinker_infer.py
src/ar_finetune/datasets/: conversations.py  emails.py
src/ar_finetune/tinker/: infer.py  sft.py
