[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ar-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "blobfile>=3.1.0",
    "chz>=0.4.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "mlx>=0.30.1",
    "mlx-lm>=0.29.1",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "pydantic>=2.11.0",
    "scikit-learn>=1.8.0",
    "termcolor>=3.2.0",
    "tqdm>=4.67.0",
    "tinker>=0.7.0",
    "tinker-cookbook",
    "transformers>=4.57.3",
]

[project.scripts]
ar-ft-make-conversations = "ar_finetune.cli.make_conversations:main"
ar-ft-tinker-finetune = "ar_finetune.cli.tinker_finetune:main"
ar-ft-tinker-infer = "ar_finetune.cli.tinker_infer:main"
ar-ft-gpt-benchmark = "ar_finetune.cli.gpt_benchmark:main"

[tool.uv.sources]
tinker-cookbook = { git = "https://github.com/thinking-machines-lab/tinker-cookbook.git", rev = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/ar_finetune"]
